--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f8f8f8;
+        background-color: rgba(30,30,30);
         margin: 0;
         padding: 0;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
+        color: white;
     }
     .quote-container {
         max-width: 500px;
         padding: 20px;
         border-radius: 8px;
-        background-color: #fff;
+        background-color: rgba(25,25,25);
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         text-align: center;
     }
