--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: rgba(30,30,30);
+        background-color: rgba(25,25,25);
         margin: 0;
         padding: 0;
         display: flex;
         justify-content: center;
-        align-items: top;
+        align-items: center;
         height: 100vh;
         color: white;
     }
